Threads type implementation
Signed-off-by: Keshava Munegowda <keshava.gowda@gmail.com>